# digital-materials-alumina-refractory

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  clustering.yaml  correspondence.yaml  feature_selection.yaml  regression.yaml
configs/feature_selection/: correlation_allowlist.csv  final_selection_policy.csv
scripts/: 00_cluster_correspondence.py  00_clustering_comparison.py  00_clustering_per_sample.py  00_clustering_preprocess.py  01_feature_selection_dual_model_rfe.py  01_feature_selection_high_corr_scan.py  01_feature_selection_key_correlation_pairs.py  01_feature_selection_table6_benchmark.py  01_feature_selection_target_feature_correlation.py  02_multitarget_regression_tabpfn_shap.py  02_plot_dependence_all_targets.py  02_plot_dependence_kic.py  02_regenerate_shap_figures.py  03_ablation_highcorr_shap.py  03_ablation_stability.py  03_plot_ablation_combined.py  03_plot_ablation_final.py  _ablation_stability_impl.py  _selected_feature_io.py
scripts/supplementary_material/: 01_clustering_checks.py  02_weight_sensitivity_original_style.py  03_weight_sensitivity_visuals.py  04_export_table_s2_from_docx.py  05_small_sample_all_models.py  06_small_sample_tabpfn_xgboost.py
src/nano2/: paths.py
